<resources>
    <string name="app_name">Roamio</string>
    <string name="Hello">Welcome to Roamio</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trip_maps">TripMapsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="resume_trip_text">Resume Trip</string>
    <string name="pause_trip_text">Pause Trip</string>
    <string name="end_trip_confirm_text">Do you want to end your trip?</string>
    <string name="trip_title_placeholder">Trip Title</string>
    <string name="trip_duration_placeholder">01:30:23</string>
    <string name="trip_date_placeholder">16/08/2025 13:51</string>
    <string name="trip_distance_placeholder">2.37 km</string>
    <string name="trip_comment_placeholder">This is a comment</string>
    <string name="trip_time_text">Time:</string>
    <string name="total_distance_text">Total Distance:</string>
    <string name="trip_date_text">Date</string>
    <string name="delete_trip_text">Delete Trip</string>
    <string name="rename_trip_text">Rename Trip</string>
    <string name="change_comment_text">Change Comment</string>
    <string name="alert_dialog_placeholder">Text Here</string>
    <string name="trip_delete_confirmation_text">Are you sure you want to delete this trip?</string>
    <string name="text_input_placeholder">Enter Text Here</string>
    <string name="start_trip_text">Start Trip</string>
    <string name="welcome_user_text">Welcome User!</string>
    <string name="last_trip_text">Last Trip:</string>
    <string name="roamio_welcome_text">Welcome to Roamio! \n Before we start with your trips, allow us to access some permissions and get your name!</string>
    <string name="enter_your__name_text">Enter your name:</string>
    <string name="continue_button_text">Continue</string>
    <string name="user_total_duration_text">Total Duration:</string>
    <string name="user_total_distance_text">Total Distance:</string>
    <string name="settings_back_button_text">Back to user</string>
    <string name="settings_text">Settings</string>
    <string name="user_image_text">User image</string>
    <string name="user_name_placeholder">User</string>
    <string name="settings_title_placeholder">Settings Title</string>
    <string name="setting_detail_placeholder">This is a detail about the specific setting</string>
    <string name="change_user_name_text">Change User Name</string>
    <string name="change_user_name_details">Change your visible user name.</string>
    <string name="trip_time_title">Time:</string>
    <string name="trip_time_start_placeholder">00:00:00</string>
    <string name="trip_distance_title">Total Distance:</string>
    <string name="trip_distance_start_placeholder">0.00 km</string>
    <string name="end_trip_text">End Trip</string>


</resources>