<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--This is for the main content -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/past_trip_main_content_container">

        <fragment
            android:id="@+id/trips_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/past_trip_main_content_container"
            app:layout_anchorGravity="center"
            tools:context=".TripMapsActivity" />

    </FrameLayout>

    <!--This is for the bottom sheet menu    -->
    <LinearLayout
        android:id="@+id/trip_bottom_sheet_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"


        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pastTripTitleTextView"
                android:text="@string/trip_title_placeholder"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/pastTripCommentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_comment_placeholder"
                android:layout_marginTop="7dp"
                android:padding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            >

            <!-- For the time -->
            <LinearLayout
                android:id="@+id/pastTripLinearLayoutTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:gravity="center"

                android:layout_marginRight="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_time_text" />

                <TextView
                    android:id="@+id/pastTripTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_duration_placeholder" />

            </LinearLayout>


            <!-- For the total distance -->
            <LinearLayout
                android:id="@+id/linearLayoutTotalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_distance_text" />

                <TextView
                    android:id="@+id/pastTripDistanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/trip_distance_placeholder" />

            </LinearLayout>

            <!-- For the date part-->
            <LinearLayout
                android:id="@+id/linearLayoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_date_text" />

                <TextView
                    android:id="@+id/pastTripDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/trip_date_placeholder" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pastTripEditTitleButton"
                app:icon="@drawable/edit_icon"
                android:layout_marginEnd="10dp"
                android:text="@string/rename_trip_text"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pastTripCommentButton"
                android:layout_marginStart="10dp"
                app:icon="@drawable/edit_icon"
                android:text="@string/change_comment_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pastTripDeleteTripButton"
                app:icon="@drawable/delete_icon"
                android:text="@string/delete_trip_text"
                app:backgroundTint="@color/end_button_red"/>
        </LinearLayout>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>