<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/settings_back_button_text"
            app:icon="@drawable/arrow_back"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="32dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:layout_centerInParent="true"
            android:textSize="20sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"

            >
            <ImageView
                android:id="@+id/userImageView"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/user_image_text"
                android:src="@drawable/person"
                android:background="@drawable/account_circle"/>

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_placeholder"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                />

            <include
                layout="@layout/card_view_settings"
                android:id="@+id/changeAccountNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />




        </LinearLayout>








    </ScrollView>



</LinearLayout>