<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Base.Theme.Roamio"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--This is for the main content -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_content_container">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/main_content_container"
            app:layout_anchorGravity="center"
            tools:context=".MapsActivity" />

    </FrameLayout>

    <!--This is for the bottom sheet menu    -->
    <LinearLayout
        android:id="@+id/bottom_sheet_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"


        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <!-- For the time -->
            <LinearLayout
                android:id="@+id/linearLayoutTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayoutTotalDistance"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_time_title"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tripTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_time_start_placeholder" />
            </LinearLayout>


            <!-- For the total distance           -->
            <LinearLayout
                android:id="@+id/linearLayoutTotalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/linearLayoutTime"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_distance_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tripDistanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/trip_distance_start_placeholder" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/pauseTripButton"
                android:text="@string/pause_trip_text"
                android:layout_margin="10dp"
                android:backgroundTint="@color/pause_button_grey"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/endTripButton"
                android:text="@string/end_trip_text"
                android:layout_margin="10dp"
                android:backgroundTint="@color/end_button_red"
                />

        </LinearLayout>




    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>